# Homework-4-Error-Handling-and-the-Heap

./: .gitignore  README.md  dune-project
asm/: assemble.ml  directive.ml
examples/: README.md
lib/: compile.ml  dune  error.ml  interp.ml  runtime.ml  symtab.ml  util.ml
lib/runtime/: Makefile  runtime.c
s_exp/: exp.ml  lex.mll  parse.mly  parser.ml  s_exp.ml
test/: difftest.ml  dune
