(executable
 (name difftest)
 (modules difftest)
 (libraries yojson lib))

(rule
 (alias runtest)
 (deps
  difftest.exe
  (glob_files ../data/*)
  (glob_files ../examples/examples.csv)
  (glob_files ../examples/*.lisp)
  (glob_files ../examples/*.out)
  (glob_files ../examples/*.err)
  (glob_files ../examples/*.in))
 (action
  (run ./difftest.exe)))
